syntax = "proto3";

package db;

service RaftServer 
{
    rpc Ping (PingMessage) returns (PingMessage) {}
    rpc PingFollower (PingMessage) returns (PingMessage) {}

    rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse) {}
    rpc RequestVote (RvRequest) returns (RvResponse) {}

    rpc Get (GetRequest) returns (GetResponse) {}
    rpc Put (PutRequest) returns (PutResponse) {}
}

message PingMessage { }

message GetRequest {
    string key = 1;
}

message GetResponse {
    uint32 leaderid = 1;
    string value = 2;
    uint32 db_errno = 3;
}

message PutRequest {
    string key = 1;
    string value = 2;
}

message PutResponse {
    uint32 leaderid = 1;
    uint32 db_errno = 2;
}

message LogEntry {
    uint32 index = 1;
    uint32 term = 2;
    string key = 3;
    string value = 4; 
}

message AppendEntriesRequest {
    uint32 term = 1;
    uint32 leaderId = 2;
    uint32 prevLogIndex = 3;
    uint32 prevLogTerm = 4;
    repeated LogEntry entries = 5;
    uint32 leaderCommitIndex = 6;
}

message AppendEntriesResponse {
    uint32 currTerm = 1;
    bool success = 2;
}

message RvRequest {
    uint32 term = 1;
    uint32 candidateId = 2;
    uint32 lastLogTerm = 3;
    uint32 lastLogIndex = 4;
}

message RvResponse {
    uint32 term = 1;
    bool voteGranted = 2;
}